--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 			<footer id="contact">
         <h2 class="section-title">Contact</h2>
-				<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
+        <div class="section-desc">
+  				<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
+        </div>
         <p class="center"><a href="mailto:workwith@fitz.to">workwith@fitz.to</a></p>
         <nav class="footer_social">
           <a href="mailto:workwith@fitz.to" target="_blank">Email</a>
