--- a/_layouts/single-document.html
+++ b/_layouts/single-document.html
@@ -2,10 +2,13 @@
   <section>
   	<h1 class="section-title">{{ page.title }}</h1>
   	<p>{{ page.excerpt }}</p>
-    {{ content }}
+    <p class="clear"></p>
+    <div class="document-content">
+      {{ content }}
+    </div>
   </section>
   <section>
-  	<h2 class="section-title">Latest Posts</h2>
+  	<h2 class="section-title latest-posts-title">Latest Posts</h2>
     {% for post in site.categories.document limit:3 %}
     <div class="home_post">
         <h3>
