--- a/_layouts/single-make.html
+++ b/_layouts/single-make.html
@@ -1,6 +1,7 @@
 {% include header.html %}
   <section>
   	<h1 class="section-title">{{ page.title }}</h1>
+    <p class="clear"></p>
     <img src="../{{ page.img }}" alt="{{ page.title }}" class="portfolio-image">
     <div class="portfolio-description">
       {{ content }}
