--- a/_layouts/single-make.html
+++ b/_layouts/single-make.html
@@ -2,7 +2,14 @@
   <section>
   	<h1 class="section-title">{{ page.title }}</h1>
     <p class="clear"></p>
-    <img src="../{{ page.img }}" alt="{{ page.title }}" class="portfolio-image">
+    <span data-picture data-alt="{{ page.imgAlt }}">
+      <span data-src="../images/{{ page.img }}-small.jpg"></span>
+      <span data-src="../images/{{ page.img }}-medium.jpg" data-media="(min-width: 768px)"></span>
+      <span data-src="../images/{{ page.img }}-large.jpg" data-media="(min-width: 979px)"></span>
+
+      <noscript><img src="../images/{{ page.img }}-small.jpg" alt="{{ page.imgAlt }}"></noscript>
+    </span>
+    <!-- <img src="../images/{{ page.img }}.jpg" alt="{{ page.title }}" class="portfolio-image"> -->
     <div class="portfolio-description">
       {{ content }}
     </div>
