--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ header, section, footer {
     display: table;
     clear: both; }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 979px) {
   header {
     padding: 1em 0; } }
 
@@ -135,7 +135,7 @@ header, section, footer {
       width: 20em; } }
   @media only screen and (min-width: 979px) {
     .header_text {
-      margin-right: 10em; } }
+      width: 28.5em; } }
   .header_text h1 {
     margin: 0.2em 0 0;
     font-size: 2.7em; }
@@ -157,6 +157,9 @@ header, section, footer {
       left: -1em;
       opacity: 1;
       width: 21em; } }
+  @media only screen and (min-width: 979px) {
+    .header_logo {
+      width: auto; } }
 
 nav a:not(:last-child) {
   margin-right: 0.5em; }
@@ -224,7 +227,7 @@ a.project-thumb:link, a.project-thumb:visited {
   text-shadow: 0em 0em 0.5em white; }
 
 .project-thumb-image {
-  background-position: no-repeat center center fixed;
+  background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
