added variety of sizes of images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         {% for project in site.categories.make %}
             <a href="{{ project.url }}" class="project-thumb">
                 <h3>{{ project.title }}</h3>
-                <div class="project-thumb-image" style="background-image:url(../images/{{ project.img }}.jpg);"></div>
+                <div class="project-thumb-image" style="background-image:url(../images/{{ project.img }}-small.jpg);"></div>
             </a>
         {% endfor %}
     </section>
