--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 .section-desc, .portfolio-description {
   text-indent: 1em; }
 
-@media only screen and (max-width: 768px) {
-  * {
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word; } }
+* {
+  box-sizing: border-box; }
+  @media only screen and (max-width: 768px) {
+    * {
+      -ms-word-break: break-all;
+      word-break: break-all;
+      word-break: break-word; } }
 
 html {
   background-color: white;
@@ -194,6 +196,7 @@ footer p {
 .project-thumb {
   display: block;
   height: 13em;
+  margin-top: 1em;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -222,9 +225,12 @@ footer p {
     z-index: 800; }
 
 a.project-thumb:link, a.project-thumb:visited {
-  border-bottom: none;
+  border: 0.2em solid rgba(20, 0, 51, 0.1);
   color: #20005c;
   text-shadow: 0em 0em 0.5em white; }
+
+a.project-thumb:hover, a.project-thumb:active {
+  border-color: rgba(224, 204, 255, 0.5); }
 
 .project-thumb-image {
   background-position: center;
