--- a/css/main.scss
+++ b/css/main.scss
@@ -163,6 +163,7 @@ $desktop-large-min-size: 1200px !default;
 // Mb     dM  MM   MM  YM.    ,          :MM;    :MM;     MM `Mb    MM YM.    ,
 // P"Ybmmd" .JMML. `Mbmo`Mbmmd'           VF      VF    .JMML.`Wbmd"MML.`Mbmmd'
 * {
+	box-sizing: border-box;
 	@include break(mobile) {
 		-ms-word-break: break-all;
 		word-break: break-all;
@@ -427,6 +428,7 @@ footer {
 .project-thumb {
 	display: block;
 	height: 13em;
+	margin-top: 1em;
 	position: relative;
 	text-align: center;
 	text-decoration: none;
@@ -447,9 +449,12 @@ footer {
 	}
 }
 a.project-thumb:link, a.project-thumb:visited {
-	border-bottom: none;
+	border: 0.2em solid $gDarkPurple;
 	color: $black;
 	text-shadow: 0em 0em 0.5em white;
+}
+a.project-thumb:hover, a.project-thumb:active {
+	border-color: $gLightPurple;
 }
 .project-thumb-image {
 	background-position: center;
