--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,10 @@ footer p {
 
 .section-title {
   padding-left: 0.5em; }
+  @media only screen and (min-width: 768px) and (max-width: 979px) {
+    .section-title {
+      float: left;
+      width: 10.2em; } }
   @media only screen and (min-width: 768px) {
     .section-title {
       padding-left: 1.5em; } }
@@ -195,6 +199,13 @@ footer p {
       .section-title:nth-child(2n-1) {
         margin-right: 0; } }
 
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .section-desc {
+    float: left;
+    margin-top: 1em;
+    width: 18.5em; }
+    .section-desc:nth-child(2n-1) {
+      margin-right: 1em; } }
 @media only screen and (min-width: 979px) {
   .section-desc {
     width: 28.3em; } }
@@ -286,14 +297,26 @@ a.project-thumb:hover, a.project-thumb:active {
   .document-content {
     width: 40em; } }
 
-@media only screen and (min-width: 768px) and (max-width: 979px) {
+@media only screen and (min-width: 979px) {
   .latest-posts-title {
-    float: left;
-    width: 8.7em; } }
+    width: 15.5em; } }
 
-.portfolio-image {
-  display: block;
-  margin: 0 auto; }
+h1.section-title {
+  width: auto; }
+
+.portfolio-image img {
+  margin-bottom: 1em; }
+
+.portfolio-link {
+  margin: 1em 0;
+  text-align: center; }
+  @media only screen and (min-width: 768px) {
+    .portfolio-link {
+      font-size: 1.3em;
+      margin: 1.5em 0 1em; } }
+  @media only screen and (min-width: 979px) {
+    .portfolio-link {
+      margin-top: 0; } }
 
 @media only screen and (min-width: 979px) {
   .portfolio-description, .portfolio-meta {
@@ -304,9 +327,27 @@ a.project-thumb:hover, a.project-thumb:active {
     .portfolio-description:nth-child(2n-1), .portfolio-meta:nth-child(2n-1) {
       margin-right: 1em; } }
 
+@media only screen and (min-width: 979px) {
+  .portfolio-description p:first-child {
+    margin-top: 0; } }
+
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .portfolio-services, .portfolio-technology {
+    float: left;
+    margin-top: 1em;
+    width: 18.5em; }
+    .portfolio-services:nth-child(2n-1), .portfolio-technology:nth-child(2n-1) {
+      margin-right: 1em; } }
+
+.make .section-title {
+  float: none;
+  width: auto; }
 @media only screen and (min-width: 768px) {
   .make h2.section-title {
     float: left;
+    width: 10.25em; } }
+@media only screen and (min-width: 979px) {
+  .make h2.section-title {
     width: 15.5em; } }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
   .make .project-thumb {
