--- a/css/main.scss
+++ b/css/main.scss
@@ -399,6 +399,10 @@ footer {
 }
 .section-title {
 	padding-left: 0.5em;
+	@include break(tablet) {
+		float: left;
+		width: 10.2em;
+	}
 	@include break(tablet-andup) {
 		padding-left: 1.5em;
 	}
@@ -411,6 +415,7 @@ footer {
 }
 .section-desc {
 	@extend %text-indent;
+	@include midsized-two-column-obj();
 	@include break(desktop) {
 		width: 28.3em;
 	}
@@ -504,29 +509,60 @@ a.project-thumb:hover, a.project-thumb:active {
 	}
 }
 .latest-posts-title {
-	@include break(tablet) {
-		float: left;
-		width: 8.7em;
+	@include break(desktop) {
+		width: 15.5em;
 	}
+}
+h1.section-title {
+	width: auto;
 }
 // .dP"Y8 88 88b 88  dP""b8 88     888888     88""Yb  dP"Yb  88""Yb 888888
 // `Ybo." 88 88Yb88 dP   `" 88     88__       88__dP dP   Yb 88__dP   88
 // o.`Y8b 88 88 Y88 Yb  "88 88  .o 88""       88"""  Yb   dP 88"Yb    88
 // 8bodP' 88 88  Y8  YboodP 88ood8 888888     88      YbodP  88  Yb   88
 .portfolio-image {
-	display: block;
-	margin: 0 auto;
+	img {
+		margin-bottom: 1em;
+	}
+}
+.portfolio-link {
+	margin: 1em 0;
+	text-align: center;
+	@include break(tablet-andup) {
+		font-size: 1.3em;
+		margin: 1.5em 0 1em;
+	}
+	@include break(desktop) {
+		margin-top: 0;
+	}
 }
 .portfolio-description, .portfolio-meta {
 	@include full-two-column-obj();
 }
 .portfolio-description {
 	@extend %text-indent;
+	p {
+		&:first-child {
+			@include break(desktop) {
+				margin-top: 0;
+			}
+		}
+	}
+}
+.portfolio-services, .portfolio-technology {
+	@include midsized-two-column-obj();
 }
 .make {
+	.section-title {
+		float: none;
+		width: auto;
+	}
 	h2.section-title {
 		@include break(tablet-andup) {
 			float: left;
+			width: 10.25em;
+		}
+		@include break(desktop) {
 			width: 15.5em;
 		}
 	}
