made header logo responsive

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,18 @@
     <body {% if bodyClass %} class="{{ bodyClass }}" {% endif %}>
         <div class="wrap">
             <header>
-                <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="header_logo" />
+
+
+                <span data-picture data-alt="Fitz Ryland" class="header_logo">
+                  <span data-src="../images/logo-small.png"></span>
+                  <span data-src="../images/logo-medium.png" data-media="(min-width: 768px)"></span>
+                  <span data-src="../images/logo-large.png" data-media="(min-width: 979px)"></span>
+
+                  <noscript><img src="../images/logo-small.png" alt="{{ project.imgAlt }}"></noscript>
+                </span>
+
+
+                <!-- <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="header_logo" /> -->
                 <div class="header_text">
                     <a href="/"><h1>Fitz Ryland</h1></a>
                     <h2>Freelance Web Designer</h2>
