a few minor spacing adjustments

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="section-desc">
   				<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
         </div>
-        <p class="center"><a href="mailto:workwith@fitz.to">workwith@fitz.to</a></p>
+        <p class="footer_email"><a href="mailto:workwith@fitz.to">workwith@fitz.to</a></p>
         <nav class="footer_social">
           <a href="mailto:workwith@fitz.to" target="_blank">Email</a>
           <a href="http://www.linkedin.com/in/fitzhughryland/" target="_blank">LinkedIn</a>
