--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,13 @@ nav a:not(:last-child) {
 footer p {
   margin-top: 0; }
 
+.footer_email {
+  text-align: center; }
+  @media only screen and (min-width: 768px) {
+    .footer_email {
+      clear: both;
+      padding-top: 0.5em; } }
+
 .footer_social {
   margin: 1.5em 0 1em;
   text-align: center; }
@@ -302,6 +309,9 @@ h1.section-title {
     .portfolio-description:nth-child(2n-1), .portfolio-meta:nth-child(2n-1) {
       margin-right: 1em; } }
 
+@media only screen and (min-width: 979px) {
+  .portfolio-description {
+    padding-right: 1em; } }
 @media only screen and (min-width: 979px) {
   .portfolio-description p:first-child {
     margin-top: 0; } }
