added prefixing for box-sizing

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
   text-indent: 1em; }
 
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   box-sizing: border-box; }
   @media only screen and (max-width: 768px) {
     * {
