--- a/css/main.scss
+++ b/css/main.scss
@@ -151,6 +151,9 @@ $desktop-large-min-size: 1200px !default;
 // Mb     dM  MM   MM  YM.    ,          :MM;    :MM;     MM `Mb    MM YM.    ,
 // P"Ybmmd" .JMML. `Mbmo`Mbmmd'           VF      VF    .JMML.`Wbmd"MML.`Mbmmd'
 * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 	@include break(mobile) {
 		-ms-word-break: break-all;
