fixed JS smooth scroll error on single make page

--- a/_layouts/single-make.html
+++ b/_layouts/single-make.html
@@ -30,7 +30,7 @@
       {% endif %}
     </div>
   </section>
-  <section>
+  <section id="portfolio">
     <h2 class="section-title">Portfolio</h2>
     {% for project in site.categories.make %}
       {% if project.title != page.title %}
