--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 {% include head.html %}
     {% assign pageCat = page.categories | downcase | replace: ' ', '-' %}
     {% if pageCat != '' %}
-        {% assign bodyClass = pageCat %}
+        {% assign bodyClass = 'make' %}
     {% else %}
         {% assign bodyClass = 'home' %}
     {% endif %}
-    <body {% if bodyClass %} class="{{ page.categories }}" {% endif %}>
+    <body {% if bodyClass %} class="{{ bodyClass }}" {% endif %}>
         <!-- {{ page.categories }} -->
         <div class="wrap">
             <header>
