ok, for real this time. I changed how the body class is applied. We will see if jekyll on GitHub builds the site the same as my local Jekyll....

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,5 @@
 {% include head.html %}
-    {% assign pageCat = page.categories | downcase | replace: ' ', '-' %}
-    {% if pageCat != '' %}
-        {% assign bodyClass = pageCat %}
-    {% else %}
-        {% assign bodyClass = 'home' %}
-    {% endif %}
-    <body {% if bodyClass %} class="{{ bodyClass }}" {% endif %}>
-        <!-- {{ page.layout }} -->
+    <body class="{{ page.layout }}">
         <div class="wrap">
             <header>
 
