added html for documentation back in

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
             </a>
         {% endfor %}
     </section>
-<!--     <section id="documentation">
+    <section id="documentation">
         <h2 class="section-title">Documentation</h2>
         <p class="section-desc">This is where I will be documenting my work in process. I do it to inform other professionals and so that other professionals can tell me why I am wrong. We all learn! I am also creating helpful material for my clients.</p>
         {% for post in site.categories.document %}
@@ -25,5 +25,5 @@
             <p>{{ post.excerpt }}</p>
         </div>
         {% endfor %}
-    </section> -->
+    </section>
 {% include footer.html %}
