--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
 	<a href="/#portfolio">Portfolio</a>
-	<!-- <a href="/#documentation">Documentation</a> -->
+	<a href="/#documentation">Documentation</a>
 	<a href="#contact">Contact</a>
 </nav>
