--- a/css/main.scss
+++ b/css/main.scss
@@ -21,17 +21,19 @@
 // Colors
 $black: #20005c;
 $purple: #6402ff;
-$bgWhite: hsla(0, 100, 100, 0.8);
-// Gradient Colors
-$gLightPurple: hsla(264, 100, 90, 0.5);
+$bgWhite: hsla(0, 100, 100, 0.9);
+$lightPurple: hsla(264, 100, 90, 0.5);
 $white: hsla(0, 100, 100, 0.5);
-$gDarkPurple: hsla(264, 100, 10, 0.1);
-// Button Colors
-$buttonL: #dac1ff;
-$buttonD: #7e59b5;
-$buttonBorderL: #9f78d9;
-$buttonBorderD: #7b4ac2;
-$buttonTextShadow: #f4ebff;
+$darkPurple: hsla(264, 100, 10, 0.1);
+$yellow: #FFCB00;
+$green: #00FF71;
+
+$c-primary1: $black; // text
+$c-primary2: $purple; // link
+$c-base1: $white; // bg color
+$c-base2: $bgWhite; // box bg color
+$c-secondary1: $lightPurple; // border/bggradient 1&2
+$c-secondary2: $darkPurple;
 
 $mobileWidth: 20em;
 $midWidth: 40em;
@@ -166,63 +168,63 @@ html {
 	background-color:white;
 	background-image:
 		-webkit-repeating-linear-gradient(45deg,
-			$gLightPurple,
-			$gLightPurple 10px,
-			$white 10px,
-			$white 15px,
-			$gDarkPurple 15px,
-			$gDarkPurple 25px,
-			$gLightPurple 25px,
-			$gLightPurple 30px,
-			$gDarkPurple 30px,
-			$gDarkPurple 45px,
-			$white 45px,
-			$white 100px),
+			$c-secondary1,
+			$c-secondary1 10px,
+			$c-base1 10px,
+			$c-base1 15px,
+			$c-secondary2 15px,
+			$c-secondary2 25px,
+			$c-secondary1 25px,
+			$c-secondary1 30px,
+			$c-secondary2 30px,
+			$c-secondary2 45px,
+			$c-base1 45px,
+			$c-base1 100px),
 		-webkit-repeating-linear-gradient(135deg,
-			$gLightPurple,
-			$gLightPurple 10px,
-			$white 10px,
-			$white 15px,
-			$gDarkPurple 15px,
-			$gDarkPurple 25px,
-			$white 25px,
-			$white 30px,
-			$gDarkPurple 30px,
-			$gDarkPurple 45px,
-			$white 45px,
-			$white 100px)
+			$c-secondary1,
+			$c-secondary1 10px,
+			$c-base1 10px,
+			$c-base1 15px,
+			$c-secondary2 15px,
+			$c-secondary2 25px,
+			$c-base1 25px,
+			$c-base1 30px,
+			$c-secondary2 30px,
+			$c-secondary2 45px,
+			$c-base1 45px,
+			$c-base1 100px)
 	;
 	background-image:
 		repeating-linear-gradient(45deg,
-			$gLightPurple,
-			$gLightPurple 10px,
-			$white 10px,
-			$white 15px,
-			$gDarkPurple 15px,
-			$gDarkPurple 25px,
-			$gLightPurple 25px,
-			$gLightPurple 30px,
-			$gDarkPurple 30px,
-			$gDarkPurple 45px,
-			$white 45px,
-			$white 100px),
+			$c-secondary1,
+			$c-secondary1 10px,
+			$c-base1 10px,
+			$c-base1 15px,
+			$c-secondary2 15px,
+			$c-secondary2 25px,
+			$c-secondary1 25px,
+			$c-secondary1 30px,
+			$c-secondary2 30px,
+			$c-secondary2 45px,
+			$c-base1 45px,
+			$c-base1 100px),
 		repeating-linear-gradient(135deg,
-			$gLightPurple,
-			$gLightPurple 10px,
-			$white 10px,
-			$white 15px,
-			$gDarkPurple 15px,
-			$gDarkPurple 25px,
-			$white 25px,
-			$white 30px,
-			$gDarkPurple 30px,
-			$gDarkPurple 45px,
-			$white 45px,
-			$white 100px)
+			$c-secondary1,
+			$c-secondary1 10px,
+			$c-base1 10px,
+			$c-base1 15px,
+			$c-secondary2 15px,
+			$c-secondary2 25px,
+			$c-base1 25px,
+			$c-base1 30px,
+			$c-secondary2 30px,
+			$c-secondary2 45px,
+			$c-base1 45px,
+			$c-base1 100px)
 	;
 }
 body {
-	color:$black;
+	color:$c-primary1;
 	font:16px 'Open Sans', sans-serif;
 	margin:0;
 	padding:0;
@@ -252,19 +254,17 @@ h6 {
 	font-size: 1em;
 }
 a:link, a:visited {
-	border-bottom: 1px solid $purple;
-	color:$black;
-	text-decoration: none;
+	color: $c-primary2;
 	@include transition(all);
 }
 a:hover, a:active {
-	color:$purple;
+	color: $c-primary2;
 }
 ::selection {
-	background: $gLightPurple;
+	background: $c-secondary1;
 	}
 ::-moz-selection {
-	background: $gLightPurple;
+	background: $c-secondary1;
 }
 p {
 	margin: 0.5em 0;
@@ -286,7 +286,7 @@ img {
 	}
 }
 header, section, footer {
-	background-color:$bgWhite;
+	background-color: $c-base2;
 	margin:2em 0;
 	padding:1em;
 	position:relative;
@@ -312,7 +312,11 @@ header {
 		font-size: 20px;
 		width: 25em;
 	}
+	a {
+		text-decoration: none;
+	}
 	h1 {
+		color: $c-primary1;
 		margin:0.2em 0 0;
 		font-size: 2.7em;
 	}
@@ -320,6 +324,7 @@ header {
 		font-size: 1.4em;
 	}
 	h3 {
+		color: $c-primary1;
 		font-size: 1.3em;
 	}
 }
@@ -342,7 +347,8 @@ header {
 	}
 }
 nav {
-	a {
+	a:link {
+		text-decoration: underline;
 		&:not(:last-child) {
 			margin-right: 0.5em;
 		}
@@ -412,7 +418,7 @@ footer {
 		height: 19.5em;
 	}
 	h3 {
-		background-color: $white;
+		background-color: $c-base1;
 		margin-top: 0;
 		padding: 0.5em 0;
 		position: relative;
@@ -420,12 +426,12 @@ footer {
 	}
 }
 a.project-thumb:link, a.project-thumb:visited {
-	border: 0.2em solid $gDarkPurple;
-	color: $black;
+	border: 0.2em solid $c-secondary2;
+	color: $c-primary1;
 	text-shadow: 0em 0em 0.5em white;
 }
 a.project-thumb:hover, a.project-thumb:active {
-	border-color: $gLightPurple;
+	border-color: $c-secondary1;
 }
 .project-thumb-image {
 	bottom: 0;
@@ -495,7 +501,7 @@ h1.section-title {
 // 8bodP' 88 88  Y8  YboodP 88ood8 888888     88      YbodP  88  Yb   88
 .portfolio-image {
 	img {
-		border: 0.2em solid $gDarkPurple;
+		border: 0.2em solid $c-secondary2;
 		margin-bottom: 1em;
 	}
 }
